# RISAT

./: .gitignore  README.md  RISAT-enc-TX-dec-RX-v0.1.0.patch  pyproject.toml
.github/workflows/: build-desktop.yml  test.yml
docs/: GUI.md  RISAT-1.md
src/risat/: __init__.py  audio_io.py  channel.py  cli.py  gui.py  i18n.py  image_codec.py  modem.py  protocol.py
tests/: test_i18n.py  test_roundtrip.py
